# AgentFence

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  agentfence.policy.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx  site-path.ts  styles.css
apps/web/app/blog/: page.tsx
apps/web/app/changelog/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/docs/architecture/: page.tsx
apps/web/app/docs/audit/: page.tsx
apps/web/app/docs/development/: page.tsx
apps/web/app/docs/integrations/: page.tsx
apps/web/app/docs/integrations/claude-code/: page.tsx
apps/web/app/docs/integrations/codex/: page.tsx
apps/web/app/docs/integrations/cursor-style/: page.tsx
apps/web/app/docs/integrations/generic-mcp/: page.tsx
apps/web/app/docs/mcp/: page.tsx
apps/web/app/docs/policy/: page.tsx
apps/web/app/docs/quickstart/: page.tsx
apps/web/app/docs/release/: page.tsx
apps/web/app/download/: page.tsx
apps/web/app/security/: page.tsx
crates/agentfence-approval/: Cargo.toml
crates/agentfence-approval/src/: lib.rs
crates/agentfence-audit/: Cargo.toml
crates/agentfence-audit/src/: lib.rs
crates/agentfence-boundary/: Cargo.toml
crates/agentfence-boundary/src/: lib.rs
crates/agentfence-cli/: Cargo.toml
crates/agentfence-cli/src/: main.rs
crates/agentfence-daemon/: Cargo.toml
crates/agentfence-daemon/src/: main.rs
crates/agentfence-mcp/: Cargo.toml
crates/agentfence-mcp/src/: lib.rs
crates/agentfence-policy/: Cargo.toml
crates/agentfence-policy/src/: lib.rs
crates/agentfence-shell/: Cargo.toml
crates/agentfence-shell/src/: lib.rs
docs/: architecture.md  audit.md  development.md  integrations.md  mcp.md  policy.md  release.md
docs/integration-guides/: claude-code.md  codex.md  cursor-style.md  generic-mcp.md
docs/release-notes/: v0.1.0.md
examples/: claude-code.policy.json  codex.policy.json
examples/integrations/: claude-code-wrapper.json  codex-wrapper.json  cursor-style-wrapper.json  generic-mcp-proxy.json
packaging/: install.ps1  install.sh  package-cli.ps1  release-manifest.ps1
schemas/: agentfence.policy.schema.json
scripts/: integration-smoke.ps1  smoke.ps1
