[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/agentfence-approval",
  "crates/agentfence-audit",
  "crates/agentfence-boundary",
  "crates/agentfence-cli",
  "crates/agentfence-daemon",
  "crates/agentfence-mcp",
  "crates/agentfence-policy",
  "crates/agentfence-shell",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ikkkp/AgentFence"
authors = ["AgentFence Contributors"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.7", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
