[package]
name = "agentfence-approval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
agentfence-policy = { path = "../agentfence-policy" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

