[package]
name = "agentfence-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentfenced"
path = "src/main.rs"

[dependencies]
agentfence-approval = { path = "../agentfence-approval" }
agentfence-audit = { path = "../agentfence-audit" }
agentfence-mcp = { path = "../agentfence-mcp" }
agentfence-policy = { path = "../agentfence-policy" }
agentfence-shell = { path = "../agentfence-shell" }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
